# briscola

./: README.md  briscola_client.py  logging_config.py  mypy.ini  pyproject.toml  requirements.txt
backend/: setup.py  turn.py
backend/computer_logic/: basic.py  random_.py
briscola/: card.py  card_settings.py  client.py  deck.py  hand.py  pile.py  player.py
briscola_cards/: briscola_card.py  briscola_card_settings.py  briscola_deck.py  briscola_hand.py  briscola_pile.py  briscola_player.py
card_game/: game_client.py  generics.py
card_game/cards/: card.py  deck.py  hand.py  numbers.py  score.py  suits.py
card_game/table/: pile.py  player.py  table_settings.py
card_games/briscola/: card.py  card_settings.py  client.py  deck.py  game_settings.py  hand.py  pile.py  player.py
card_games/general/: game_client.py
card_games/general/cards/: card.py  deck.py  hand.py  score.py  suits.py
card_games/general/generics/: card.py  deck.py  player.py
card_games/general/table/: pile.py  player.py
config/: .flake8  logging_config.py
frontend/: app.py  old_oid_info.py
frontend/static/: script.js  styles.css
frontend/static/js/: websocket.js
frontend/templates/: end_game.html  index.html  turn.html
generics/: card.py  deck.py  player.py
logic/: setup.py  turn.py
other/computer_logic/: basic.py
other/scheduled/: keep_alive.py
play/cli/: cli_client.py  client.py  main.py
play/web/: client.py
play_cli/: cli_client.py  cli_logic.py  main.py
play_web/: web_client.py  web_logic.py
settings/: game_settings.py
src/frontend/: app.py
src/frontend/static/: script.js  styles.css
src/frontend/static/js/: websocket.js
src/frontend/templates/: end_game.html  turn.html
testing/optimize/: computer_logic.py
