[tool.black]
line-length = 100
exclude = '''
(
    \.DS_Store |
    \.githooks |
    \.html$ |
    \.idea |
    \.json$ |
    \.pyc$ |
    \.sql$ |
    \.vscode |
    \.venv |
    node_modules
)
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "briscola"
version = "0.1.0"
description = "Briscola"
authors = ["Keaton Proud <keatonrproud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-socketio = "^5.3.6"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
gevent = "^24.2.1"
flask = "^3.0.3"
sentry-sdk = {extras = ["flask"], version = "^2.14.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
